--- a/index.html
+++ b/index.html
@@ -5,8 +5,121 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <div class="container">
+        <nav class="main-navigation">
+          <ul>
+            <li>
+              <a href="#">Информация</a>
+            </li>
+            <li>
+              <a href="#">Фото и видео</a>
+            </li>
+            <li>
+              <a href="#">Карта штата</a>
+            </li>
+            <li>
+              <a href="#">Гостиницы</a>
+            </li>
+          </ul>
+          <div class="navigation-logo">
+            <img src="http://placehold.it/150x100" alt="Ведет на главную страницу">
+          </div>
+        </nav>
+      </div>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+    <main class="container">
 
-  </body>
-</html>
+            <div class="logo">
+              <img src="http://placehold.it/150x100" alt="Sedonas Logo">
+            </div>
+
+              <div class="title">
+                <p>седона - небольшой городок в аризоне, заслуживающий большего!</p>
+                <p>рассмотрим 5 причин, почему седона круче, чем гранд каньон!</p>
+              </div>
+
+          <div class="reason">
+              <section class="reason1">
+                <div class="reason-item">
+                  <b class="reason-name">Настоящий городок</b>
+                  <p>- №1 -</p>
+                  <p>седона - не аттракцион для туристов, там течет своя жизнь</p>
+                </div>
+                <img src="http://placehold.it/150x100#" alt="Sedonas view">
+              </section>
+
+              <section class="advice">
+                <div class="advice-item">
+                  <b class="advice-name">Жильё</b
+                  <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </div>
+
+              <div class="advice-item">
+                <b class="advice-name">Еда</b>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </div>
+
+              <div class="advice-item">
+                <b class="advice-name">Сувениры</b>
+                <p>Не только китайского, но и местного производства!</p>
+              </div>
+            </section>
+
+            <section class="reason2">
+              <div class="reason-item">
+                <b class="reason-name">Там есть мост дьявола</b>
+                <p>- №2 -</p>
+                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+              </div>
+              <img src="http://placehold.it/150x100" alt="Sedonas view">
+            </section>
+
+            <section class="reason3">
+              <div class="reason-item">
+                <b class="reason3-name">Небольшая площадь</b>
+                <p>Все достопримечательности находятся очень близко</p>
+              </div>
+
+              <div class="reason-item">
+                <b class="reason3-name">Красивая дорога</b>
+                <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
+              </div>
+
+              <div class="reason-item">
+                <b class="reason3-name">Мало туристов</b>
+                <p>Большиснтво едет в гранд каньон и толпится там</p>
+              </div>
+            </section>
+          </div>
+
+          <div class="interesing">
+            <p>Заинтересовались?</p>
+            <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостинниц в седоне</p>
+          </div>
+
+          <section class="map">
+            /*спрст:как вставить карту*/
+          </section>
+
+          <div class="search-hotel">
+            <p class="search-hotel-title">Поиск гостинницы в седоне</p>
+            <p>Дата заезда:</p>
+            <p>Дата выезда:</p>
+            <p>Взрослые:</p>
+            <p>Дети:</p>
+          </div>
+        </main>
+
+            <footer>
+              <p>#VISITSEDONA</p>
+              <a href="sedonavklink"></a>
+              <a href="sedonafacebooklink"></a>
+              <a href="sedonayoutubelink"></a>
+              <p>WEBSITE BY</p>
+              <a href="htmlacademylink">
+                <img src="logo-html-academy" alt="Link to the html academy's site">
+              </a>
+            </footer>
+        </body>
