Правки и начало второй стр. Разметка

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
               <section class="advice">
                 <div class="advice-item">
-                  <b class="advice-name">Жильё</b
+                  <b class="advice-name">Жильё</b>
                   <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </div>
 
@@ -78,17 +78,20 @@
 
             <section class="reason3">
               <div class="reason-item">
-                <b class="reason3-name">Небольшая площадь</b>
+                <b class="reason-name">Небольшая площадь</b>
+                <p>№4</p>
                 <p>Все достопримечательности находятся очень близко</p>
               </div>
 
               <div class="reason-item">
-                <b class="reason3-name">Красивая дорога</b>
+                <b class="reason-name">Красивая дорога</b>
+                <p>№5</p>
                 <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
               </div>
 
               <div class="reason-item">
-                <b class="reason3-name">Мало туристов</b>
+                <b class="reason-name">Мало туристов</b>
+                <p>№6</p>
                 <p>Большиснтво едет в гранд каньон и толпится там</p>
               </div>
             </section>
@@ -97,26 +100,26 @@
           <div class="interesing">
             <p>Заинтересовались?</p>
             <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостинниц в седоне</p>
-          </div>
 
           <section class="map">
            <img src="map" alt="Place where hostel located">
-          </section>
+           </section>
+         </div>
 
           <div class="search-hotel">
             <p class="search-hotel-title">Поиск гостинницы в седоне</p>
             <form action="#" method="post">
               <div class="choose-data">
                 <label>
-                  Дата заезда: <input type="text" name="data-zaezda">
-                <label>
+                  Дата заезда: <input type="text" name="data-in">
+                </label>
                 <a href="#" class="choose-calendar"></a>
               </div>
               <div class="choose-data">
                 <label>
-                  Дата выезда: <input type="text" name="data-viezda">
+                  Дата выезда: <input type="text" name="data-out">
                 </label>
-                <a href="#" class="choose-calendar">
+                <a href="#" class="choose-calendar"></a>
               </div>
 
               <section class="number-of-peple">
@@ -141,8 +144,9 @@
         </main>
 
             <footer>
+            <div class="hashtag">
               <p>#VISITSEDONA</p>
-
+            </div>
               <section class="sns">
                 <a class="btn-vk" href="#">Vk</a>
                 <a class="btn-twitter" href="#">Twitter</a>
@@ -150,8 +154,9 @@
               </section>
 
               <section class="btn-htmlacademy">
-              <p>WEBSITE BY</p>
-              <a href="https://htmlacademy.ru/">HTML Academy</a>
+                <p>WEBSITE BY</p>
+                <a href="https://htmlacademy.ru/">HTML Academy</a>
+              </section>
             </footer>
 
         </body>
