--- a/inner.html
+++ b/inner.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-
+  <body>
   <header class="main-header">
     <div class="container">
       <nav class="main-navigation">
@@ -29,7 +29,7 @@
     </div>
   </header>
 
-  <body>
+  <main>
     <div class="choose">
       <div class="infrastructure">
         <form action="#" method="post">
@@ -59,10 +59,81 @@
       </div>
       <div>
         <p>Стоимость в сутки (Р):</p>
-
+        <p>от 0</p>
+        <p>до 3000</p>
+          <div class="range">
+            <span class="range-left"></span>
+            <span class="range-right"></span>
+          </div>
+            <input type="submit" value="Показать">
       </div>
     </div>
-  <body>
+
+    <div class="sort">
+      <p>Найдено: 3</p>
+      <p>Сортировка:</p>
+      <a href="#">По цене</a>
+      <a href="#">По типу</a>
+      <a href="#"> По рейтингу</a>
+    </div>
+
+    <article class="home">
+      <img src="#" alt="Hostel's photo">
+      <div class="variant">
+        <p>AMARA RESORT & SPA</p>
+        <div class="variant-descriotion">
+          <p>Гостиница</p>
+          <a href="#">Подробнее</a>
+        </div>
+        <div class="order">
+          <p class="price-order">от 4000 р.</p>
+          <button class="btn-order">Забронировать</button>
+        </div>
+      </div>
+      <div class="rating">
+        <p class="stars">* * * *</p>
+        <p class="rating-value">Рейтинг:8,5</p>
+      </div>
+    </article>
+
+    <article class="home">
+      <img src="#" alt="Hostel's photo">
+      <div class="variant">
+        <p>DESERT QUAIL INN</p>
+        <div class="variant-descriotion">
+          <p>Мотель</p>
+          <a href="#">Подробнее</a>
+        </div>
+        <div class="order">
+          <p class="price-order">от 3000 р.</p>
+          <button class="btn-order">Забронировать</button>
+        </div>
+      </div>
+      <div class="rating">
+        <p class="stars">* * *</p>
+        <p class="rating-value">Рейтинг:8,9</p>
+      </div>
+    </article>
+
+    <article class="home">
+      <img src="#" alt="Hostel's photo">
+      <div class="variant">
+        <p>VILLAS AT POCO DIABLO</p>
+        <div class="variant-descriotion">
+          <p>апартаменты</p>
+          <a href="#">Подробнее</a>
+        </div>
+        <div class="order">
+          <span class="price-order">от 2000 р.</span>
+          <button class="btn-order">Забронировать</button>
+        </div>
+      </div>
+      <div class="rating">
+        <p class="stars">* * *</p>
+        <p class="rating-value">Рейтинг:8,5</p>
+      </div>
+    </article>
+  </main>
 
   <footer>
   <div class="hashtag">
@@ -79,5 +150,5 @@
       <a href="https://htmlacademy.ru/">HTML Academy</a>
     </section>
   </footer>
-
-  <html>
+</body>
+</html>
