--- a/inner.html
+++ b/inner.html
@@ -35,23 +35,22 @@
         <form action="#" method="post">
           <p>Инфраструктура</p>
           <input type="checkbox" name="swimming-pool" id="swimming-pool">
-          <label for="swimming-pool">Бассейн</label><br>
+          <label for="swimming-pool">Бассейн</label>
 
           <input type="checkbox" name="parking" id="parking">
-          <label for="parking">Паркинг</label><br>
+          <label for="parking">Паркинг</label>
 
           <input type="checkbox" name="wi-fi" id="wi-fi">
           <label for="wi-fi">wi-fi</label>
-        </form>
       </div>
       <div class="choose">
         <form action="#" method="post">
           <p>Тип жилья</p>
           <input type="checkbox" name="hostel" id="hostel">
-          <label for="hostel">гостинница</label><br>
+          <label for="hostel">гостинница</label>
 
           <input type="checkbox" name="motel" id="motel">
-          <label for="motel">мотель</label><br>
+          <label for="motel">мотель</label>
 
           <input type="checkbox" name="apartments" id="apartments">
           <label for="apartments">апартаменты</label>
@@ -66,6 +65,7 @@
             <span class="range-right"></span>
           </div>
             <input type="submit" value="Показать">
+        </form>
       </div>
     </div>
 
@@ -80,14 +80,14 @@
     <article class="home">
       <img src="#" alt="Hostel's photo">
       <div class="variant">
-        <p>AMARA RESORT & SPA</p>
+        <h1>AMARA RESORT & SPA</h1>
         <div class="variant-descriotion">
           <p>Гостиница</p>
           <a href="#">Подробнее</a>
         </div>
         <div class="order">
           <p class="price-order">от 4000 р.</p>
-          <button class="btn-order">Забронировать</button>
+          <a class="order">Забронировать</a>
         </div>
       </div>
       <div class="rating">
@@ -99,14 +99,14 @@
     <article class="home">
       <img src="#" alt="Hostel's photo">
       <div class="variant">
-        <p>DESERT QUAIL INN</p>
+        <h1>DESERT QUAIL INN</h1>
         <div class="variant-descriotion">
           <p>Мотель</p>
           <a href="#">Подробнее</a>
         </div>
         <div class="order">
           <p class="price-order">от 3000 р.</p>
-          <button class="btn-order">Забронировать</button>
+          <a class="order">Забронировать</a>
         </div>
       </div>
       <div class="rating">
@@ -118,14 +118,14 @@
     <article class="home">
       <img src="#" alt="Hostel's photo">
       <div class="variant">
-        <p>VILLAS AT POCO DIABLO</p>
+        <h1>VILLAS AT POCO DIABLO</h1>
         <div class="variant-descriotion">
           <p>апартаменты</p>
           <a href="#">Подробнее</a>
         </div>
         <div class="order">
           <span class="price-order">от 2000 р.</span>
-          <button class="btn-order">Забронировать</button>
+          <a class="btn-order">Забронировать</a>
         </div>
       </div>
       <div class="rating">
