правки из валидатора

--- a/inner.html
+++ b/inner.html
@@ -31,8 +31,8 @@
 
   <main>
     <div class="choose">
-      <div class="infrastructure">
-        <form action="#" method="post">
+      <form action="#" method="post">
+        <div class="infrastructure">
           <p>Инфраструктура</p>
           <input type="checkbox" name="swimming-pool" id="swimming-pool">
           <label for="swimming-pool">Бассейн</label>
@@ -42,9 +42,8 @@
 
           <input type="checkbox" name="wi-fi" id="wi-fi">
           <label for="wi-fi">wi-fi</label>
-      </div>
-      <div class="choose">
-        <form action="#" method="post">
+        </div>
+        <div class="choose">
           <p>Тип жилья</p>
           <input type="checkbox" name="hostel" id="hostel">
           <label for="hostel">гостинница</label>
@@ -54,19 +53,18 @@
 
           <input type="checkbox" name="apartments" id="apartments">
           <label for="apartments">апартаменты</label>
-        </form>
-      </div>
-      <div>
-        <p>Стоимость в сутки (Р):</p>
-        <p>от 0</p>
-        <p>до 3000</p>
+        </div>
+        <div class="day-price">
+          <p>Стоимость в сутки (Р):</p>
+          <p>от 0</p>
+          <p>до 3000</p>
           <div class="range">
             <span class="range-left"></span>
             <span class="range-right"></span>
           </div>
             <input type="submit" value="Показать">
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
 
     <div class="sort">
