--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="main-header">
@@ -23,7 +24,7 @@
             </li>
           </ul>
           <div class="navigation-logo">
-            <img src="http://placehold.it/150x100" alt="Ведет на главную страницу">
+            <img src="img/logo.png" width="138" height="70" alt="Ведет на главную страницу">
           </div>
         </nav>
       </div>
@@ -32,7 +33,7 @@
     <main class="container">
 
             <div class="logo">
-              <img src="http://placehold.it/150x100" alt="Sedonas Logo">
+              <img src="img/title.png" width="458" height="352" alt="Sedonas Logo">
             </div>
 
               <div class="title">
@@ -47,7 +48,7 @@
                   <p>- №1 -</p>
                   <p>седона - не аттракцион для туристов, там течет своя жизнь</p>
                 </div>
-                <img src="http://placehold.it/150x100#" alt="Sedonas view">
+                <img src="img/viewsedona1.jpg" width="800" height="401" alt="Sedonas view">
               </section>
 
               <section class="advice">
@@ -73,7 +74,7 @@
                 <p>- №2 -</p>
                 <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
-              <img src="http://placehold.it/150x100" alt="Sedonas view">
+              <img src="img/viewsedona2.jpg" width="800" height="400" alt="Sedonas view">
             </section>
 
             <section class="reason3">
@@ -102,7 +103,7 @@
             <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостинниц в седоне</p>
 
           <section class="map">
-           <img src="map" alt="Place where hostel located">
+           <img src="img/map.jpg" width="1200" height="593" alt="Place where hostel located">
            </section>
          </div>
 
@@ -148,14 +149,14 @@
               <p>#VISITSEDONA</p>
             </div>
               <section class="sns">
-                <a class="btn-vk" href="#">Vk</a>
-                <a class="btn-twitter" href="#">Twitter</a>
+                <a class="btn-vk" href="#">Twitter</a>
+                <a class="btn-twitter" href="#">Facebook</a>
                 <a class="btn-youtube" href="#">YouTube</a>
               </section>
 
               <section class="btn-htmlacademy">
                 <p>WEBSITE BY</p>
-                <a href="https://htmlacademy.ru/">HTML Academy</a>
+                <a href="#">HTML Academy</a>
               </section>
             </footer>
 
