--- a/inner.html
+++ b/inner.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   <header class="main-header">
@@ -23,7 +25,7 @@
           </li>
         </ul>
         <div class="navigation-logo">
-          <img src="http://placehold.it/150x100" alt="Ведет на главную страницу">
+          <img src="img/logo.png" width="138" height="70" alt="Ведет на главную страницу">
         </div>
       </nav>
     </div>
@@ -76,7 +78,7 @@
     </div>
 
     <article class="home">
-      <img src="#" alt="Hostel's photo">
+      <img src="img/amara.jpg" width="136" height="90" alt="Hostel's photo">
       <div class="variant">
         <h1>AMARA RESORT & SPA</h1>
         <div class="variant-descriotion">
@@ -95,7 +97,7 @@
     </article>
 
     <article class="home">
-      <img src="#" alt="Hostel's photo">
+      <img src="img/desert.jpg" width="136" height="90" alt="Hostel's photo">
       <div class="variant">
         <h1>DESERT QUAIL INN</h1>
         <div class="variant-descriotion">
@@ -114,7 +116,7 @@
     </article>
 
     <article class="home">
-      <img src="#" alt="Hostel's photo">
+      <img src="img/villas.jpg" width="136" height="90" alt="Hostel's photo">
       <div class="variant">
         <h1>VILLAS AT POCO DIABLO</h1>
         <div class="variant-descriotion">
